namespace VideogameArchiveAPI.Enums
{
    public enum GameStatus
    {
        Mastered,
        Completed,
        Ongoing,
        Paused,
        Played,
        Replay,
        Unfinished,
        Retired,
        Tried,
        Dropped,
        Ragequitted,
        Unplayed,
        None
    }
}