namespace VideogameArchiveAPI.Enums
{
    public enum Ownership
    {
        Wishlist,
        Owned,
        Household,
        Shared,
        Subscription,
        Borrowed,
        TriedIt,
        FormerlyOwned,

    }
}
