namespace VideogameArchiveAPI
{
    public class MapperConfig
    {
    }
}
